# mmo_design

./: .gitignore  README.md
client/design/: C++游戏大世界设计.md  C++游戏服务器技能系统设计.md  C++游戏服务器玩家成就系统设计.md  C++游戏服务器玩家数据持久化组件系统设计.md  C++游戏服务器玩家道具系统设计.md  C++游戏服务器经济系统设计.md  C++游戏服务器背包系统设计.md  C++游戏玩家服务器注册模块流程设计.md
server/: CMakeLists.txt  CMakeSettings.json  README.md
server/character_system/: CMakeLists.txt  README.md
server/character_system/examples/: CMakeLists.txt  character_example.cpp  component_test.cpp
server/character_system/include/character/: character.h  character_manager.h  character_types.h  combat_component.h  component.h  movement_component.h  network_sync_component.h  npc.h  player.h
server/character_system/src/character/: character.cpp  character_manager.cpp  combat_component.cpp  component.cpp  movement_component.cpp  network_sync_component.cpp  npc.cpp  player.cpp
server/chat_service/: CMakeLists.txt
server/chat_service/examples/: chat_example.cpp
server/chat_service/include/chat/: channel.h  chat_message.h  chat_server.h  client_session.h  content_filter.h  message_router.h
server/chat_service/proto/: chat.proto
server/chat_service/src/chat/: channel.cpp  chat_server.cpp  client_session.cpp  content_filter.cpp  message_router.cpp
server/design/: C++服务器游戏角色系统搭建.md  C++游戏Redis缓存系统设计.md  C++游戏服务器任务系统设计.md  C++游戏服务器战斗系统设计.md  C++游戏服务器玩家好友系统设计.md  C++游戏网络搭建.md  C++游戏聊天系统服务器设计 copy.md  C++游戏角色设计.md  cpp-game-network-selection.md  game-server-mindmap.md
server/game/: CMakeLists.txt
server/game/examples/: game_server_example.cpp
server/game/include/game/: game_server.h  user_manager.h
server/game/proto/: game.proto
server/game/src/game/: game_server.cpp  user_manager.cpp
server/network/: CMakeLists.txt  README.md
server/network/examples/: server_example.cpp
server/network/include/network/: config.h  connection.h  connection_pool.h  memory_pool.h  message.h  multi_thread_server.h  network.h  object_pool.h  protobuf_message.h  server.h  thread_pool.h
server/network/proto/: game_message.proto
server/network/src/: test.cpp
server/network/src/example/: server_example.cpp
server/network/src/network/: connection.cpp  connection_pool.cpp  memory_pool.cpp  message.cpp  multi_thread_server.cpp  network.cpp  protobuf_message.cpp  server.cpp  thread_pool.cpp
server/redis_cache/: CMakeLists.txt
server/redis_cache/examples/: cache_example.cpp
server/redis_cache/include/redis/: cache_manager.h  database_client.h  protobuf_serializer.h  redis_client.h
server/redis_cache/protos/: player_data.proto
server/redis_cache/src/redis/: cache_manager.cpp  database_client.cpp  protobuf_serializer.cpp  redis_client.cpp
server/register_service/: CMakeLists.txt
server/register_service/examples/: register_example.cpp
server/register_service/include/register/: message_handler.h  register_service.h  validation_service.h  verification_code_service.h
server/register_service/proto/: register.proto
server/register_service/src/register/: message_handler.cpp  register_service.cpp  validation_service.cpp  verification_code_service.cpp
server/test/: CMakeLists.txt  network_test_client.cpp  network_test_server.cpp
server/test/proto/: test.proto
